# Interviews

./: .gitignore  README.md
fibonacci/: pom.xml
fibonacci/src/main/java/com/example/fibonacci/: Fibonacci.java  Main.java
node-server/: package.json
node-server/src/: app.ts  index.ts
python-project/: README.md  pyproject.toml
python-project/src/written_test/: __init__.py  cli.py  config.py  greeter.py
python-project/tests/: test_greeter.py
spring-rw/: pom.xml
spring-rw/src/main/java/com/example/rw/: RwSeparationApplication.java
spring-rw/src/main/java/com/example/rw/annotation/: ReadOnly.java  Timed.java  WriteOnly.java
spring-rw/src/main/java/com/example/rw/aspect/: DataSourceAspect.java  TimedAspect.java
spring-rw/src/main/java/com/example/rw/config/: DataSourceConfig.java  SchemaInitializer.java
spring-rw/src/main/java/com/example/rw/datasource/: DataSourceContextHolder.java  DataSourceType.java  RoutingDataSource.java
spring-rw/src/main/java/com/example/rw/demo/: DemoRunner.java
spring-rw/src/main/java/com/example/rw/service/: UserService.java
spring-rw/src/main/resources/: application.yml  schema.sql
sql/: last_monday.sql  similarity_query.sql
